# speaker-diarization-community-1-mlx

./: .gitignore  AGENT.md  CLAUDE.md  CONVERSION_GUIDE.md  EMBEDDING_COMPARISON_STATUS.md  EMBEDDING_MODEL_FINAL_STATUS.md  EMBEDDING_MODEL_README.md  LICENSE  MODEL_COMPARISON.md  README.md  READY_FOR_UPLOAD.md  UPLOAD_INSTRUCTIONS.md  analyze_rttm.py  check_lstm_weights.py  check_pytorch_output_format.py  check_weight_formats.py  compare_model_outputs.py  compare_rttm.py  convert_embedding_model.py  debug_comparison.py  debug_lstm.py  debug_lstm_bias.py  debug_weights.py  detailed_comparison.py  diarize.py  investigate_normalization.py  pyproject.toml  pytorch_output.rttm  requirements.txt  setup.sh  test_bidirectional_stacked.py  test_full_diarization.rttm  test_loaded_weights.py  test_log_softmax.py  test_manual_vs_full.py  test_mlx_lstm_return.py  test_pyannote_model.py  test_real_inference.py  test_sequence_lstm.py  test_sincnet_comparison.py  (+3 more)
analysis/: README.md  analyze_model_differences.py  check_batchnorm_stats.py  check_bias_file.py  check_pytorch_bias.py  check_weight_formats.py  compare_embedding_models.py  compare_layer_by_layer.py  compare_model_outputs.py  compare_models.py  compare_outputs.py  compare_resnet_only.py  debug_comparison.py  debug_conv1_weights.py  debug_layer_outputs.py  debug_lstm_bias.py  debug_weights.py  test_audio.py  test_bias.py  test_conv2d_behavior.py  test_conversion.py  test_embedding_model.py  test_first_lstm.py  test_full_diarization.py  test_full_model_layers.py  test_full_pipeline.py  test_lstm_state.py  test_manual_vs_full.py  (+6 more)
(+22 files in other folders)
